tests/success/success/success.factor
USING: kernel ;
IN: success

: greet ( -- str ) "hello" ;
