tests/syntax-error/syntax-error/syntax-error-tests.factor
USING: syntax-error tools.test ;
{ "hello" } [ greet ] unit-test
